# kandoo-app

./: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  render.yaml  vite.config.js
.claude/: launch.json
docs/: cloud-sync-roadmap.md
docs/releases/: PUBLISHING.md  desktop-v0.1.0.md  desktop-v1.0.0.md
server/: README.md  package-lock.json  package.json
server/src/: index.js
server/test/: validateWorkspace.test.js
src/: App.css  App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon-v2.icns  icon.icns  kandoo-legacy.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AvatarCropper.jsx  BottomSheet.jsx  ContextMenu.jsx  FeedbackModal.jsx  HelpModal.jsx  KandooLoader.jsx  KandooToastContainer.jsx  KandooToaster.jsx  MobileTabBar.jsx  OnboardingTour.jsx  ProtectedRoute.jsx  ShortcutsHelpModal.jsx  ThemeSettings.css  ThemeSettings.jsx
src/config/: firebase.js  firestore.js
src/contexts/: AuthContext.jsx  CardsContext.jsx  SettingsContext.jsx  ThemeContext.jsx
src/hooks/: useDueNotifications.js  useLeaderChords.js  useViewport.js
src/pages/: Board.jsx  Login.css  Login.jsx
src/panel/: Panel.jsx
src/services/: api.js  boardStorage.js  firestoreSync.js  imageStorage.js
src/styles/: macui.css
src/themes/: cardPalettes.js  themeIcons.jsx  themes.js
src/utils/: boardIO.js  conflictTimeline.js  coreColumns.js  documentFonts.js  dueDate.js  flowIdGenerator.js  htmlEditor.js  labels.js  loadEditorFonts.js  noteExport.js  pdfFonts.js  (+8 more)
(+53 files in other folders)
