[package]
name = "kandoo"
version = "1.0.0"
description = "A private, local-first Kanban workspace"
authors = ["Kandoo"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "kandoo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
